// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SentryDocumentTitle
    objSlug="project"
    title="Debug Files"
  >
    <SideEffect(DocumentTitle)
      title="Debug Files - project - Sentry"
    >
      <DocumentTitle
        title="Debug Files - project - Sentry"
      />
    </SideEffect(DocumentTitle)>
  </SentryDocumentTitle>
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  >
    <SettingsPageHeading
      className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
      noTitleStyles={false}
      title="Debug Information Files"
    >
      <div
        className="css-xtfhnp-StyledSettingsPageHeading e1uay4fd4"
      >
        <TitleAndActions>
          <div
            className="css-ifzfc5-TitleAndActions e1uay4fd0"
          >
            <Title
              styled={false}
            >
              <div
                className="css-120v9s3-Title e1uay4fd1"
              >
                <HeaderTitle>
                  <h4
                    className="css-186zxqn-HeaderTitle eqkydle2"
                  >
                    Debug Information Files
                  </h4>
                </HeaderTitle>
              </div>
            </Title>
          </div>
        </TitleAndActions>
      </div>
    </SettingsPageHeading>
  </StyledSettingsPageHeading>
  <TextBlock>
    <div
      className="css-1j3tvli-TextBlock e1x1lar10"
    >
      
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
    </div>
  </TextBlock>
  <TextBlock>
    <div
      className="css-1j3tvli-TextBlock e1x1lar10"
    >
      This list contains all uploaded debug information files:
    </div>
  </TextBlock>
  <Panel>
    <Component
      className="css-1xbmlp0-Panel e119nu470"
    >
      <div
        className="css-1xbmlp0-Panel e119nu470"
      >
        <PanelHeader
          hasButtons={true}
        >
          <div
            className="css-8yda21-PanelHeader en8g1d30"
          >
            <Styled(div)
              width={0.375}
            >
              <div
                className="css-1xtl59v"
              >
                Debug ID
              </div>
            </Styled(div)>
            <Styled(div)
              flex="1"
              minWidth="auto"
            >
              <div
                className="css-gzhknm"
              >
                Name
              </div>
            </Styled(div)>
            <Styled(div)>
              <div
                className="css-vurnku"
              >
                <withRouter(AsyncComponentSearchInput)
                  api={
                    Client {
                      "_chain": [Function],
                      "_wrapRequest": [Function],
                      "bulkUpdate": [Function],
                      "handleRequestError": [Function],
                      "hasProjectBeenRenamed": [Function],
                    }
                  }
                  className="search"
                  onError={[Function]}
                  onSuccess={[Function]}
                  placeholder="Search DIFs"
                  updateRoute={true}
                  url="/projects/org/project/"
                >
                  <AsyncComponentSearchInput
                    api={
                      Client {
                        "_chain": [Function],
                        "_wrapRequest": [Function],
                        "bulkUpdate": [Function],
                        "handleRequestError": [Function],
                        "hasProjectBeenRenamed": [Function],
                      }
                    }
                    className="search"
                    debounceWait={200}
                    location={
                      Object {
                        "query": Object {},
                      }
                    }
                    onError={[Function]}
                    onSuccess={[Function]}
                    placeholder="Search DIFs"
                    router={
                      Object {
                        "createHref": [MockFunction],
                        "go": [MockFunction],
                        "goBack": [MockFunction],
                        "goForward": [MockFunction],
                        "isActive": [MockFunction],
                        "listen": [MockFunction],
                        "location": Object {
                          "query": Object {},
                        },
                        "push": [MockFunction],
                        "replace": [MockFunction],
                        "setRouteLeaveHook": [MockFunction],
                      }
                    }
                    updateRoute={true}
                    url="/projects/org/project/"
                  >
                    <Form
                      onSubmit={[Function]}
                    >
                      <form
                        className="css-1i180od-Form e6xwo1"
                        onSubmit={[Function]}
                      >
                        <Input
                          className="search"
                          onChange={[Function]}
                          placeholder="Search DIFs"
                          value=""
                        >
                          <input
                            className="search css-17dbz9s-Input e1xej46s0"
                            onChange={[Function]}
                            placeholder="Search DIFs"
                            value=""
                          />
                        </Input>
                      </form>
                    </Form>
                  </AsyncComponentSearchInput>
                </withRouter(AsyncComponentSearchInput)>
              </div>
            </Styled(div)>
          </div>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <FlexBox
            disablePadding={true}
            flex={false}
          >
            <div
              className="css-1ehogmz-FlexBox e1vnwt6f0"
            >
              <EmptyStateWarning
                small={false}
              >
                <EmptyStreamWrapper
                  data-test-id="empty-state"
                >
                  <div
                    className="css-yxq2t9-EmptyStreamWrapper e1107k000"
                    data-test-id="empty-state"
                  >
                    <IconWarning
                      size="xl"
                    >
                      <svg
                        fill="currentColor"
                        height="32px"
                        viewBox="0 0 16 16"
                        width="32px"
                      >
                        <path
                          d="M13.87,15.26H2.13A2.1,2.1,0,0,1,0,13.16a2.07,2.07,0,0,1,.27-1L6.17,1.8a2.1,2.1,0,0,1,1.27-1,2.11,2.11,0,0,1,2.39,1L15.7,12.11a2.1,2.1,0,0,1-1.83,3.15ZM8,2.24a.44.44,0,0,0-.16,0,.58.58,0,0,0-.37.28L1.61,12.86a.52.52,0,0,0-.08.3.6.6,0,0,0,.6.6H13.87a.54.54,0,0,0,.3-.08.59.59,0,0,0,.22-.82L8.53,2.54h0a.61.61,0,0,0-.23-.22A.54.54,0,0,0,8,2.24Z"
                        />
                        <path
                          d="M8,10.37a.75.75,0,0,1-.75-.75V5.92a.75.75,0,0,1,1.5,0v3.7A.74.74,0,0,1,8,10.37Z"
                        />
                        <circle
                          cx="8"
                          cy="11.79"
                          r="0.76"
                        />
                      </svg>
                    </IconWarning>
                    <p>
                      There are no debug symbols for this project.
                    </p>
                  </div>
                </EmptyStreamWrapper>
              </EmptyStateWarning>
            </div>
          </FlexBox>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Styled(Pagination)
    onCursor={[Function]}
  >
    <Pagination
      className="css-1vzq2o e1vkspke0"
      onCursor={[Function]}
    />
  </Styled(Pagination)>
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SentryDocumentTitle
    objSlug="project"
    title="Debug Files"
  />
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  />
  <TextBlock>
    
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
  </TextBlock>
  <TextBlock>
    This list contains all uploaded debug information files:
  </TextBlock>
  <Panel>
    <PanelHeader
      hasButtons={true}
    >
      <Styled(div)
        width={0.375}
      >
        Debug ID
      </Styled(div)>
      <Styled(div)
        flex="1"
        minWidth="auto"
      >
        Name
      </Styled(div)>
      <Styled(div)>
        <withRouter(AsyncComponentSearchInput)
          api={
            Client {
              "_chain": [Function],
              "_wrapRequest": [Function],
              "bulkUpdate": [Function],
              "handleRequestError": [Function],
              "hasProjectBeenRenamed": [Function],
            }
          }
          className="search"
          onError={[Function]}
          onSuccess={[Function]}
          placeholder="Search DIFs"
          updateRoute={true}
          url="/projects/org/project/"
        />
      </Styled(div)>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <EmptyStateWarning
        small={false}
      >
        <p>
          There are no debug symbols for this project.
        </p>
      </EmptyStateWarning>
    </PanelBody>
  </Panel>
  <Styled(Pagination)
    onCursor={[Function]}
  />
</Fragment>
`;
